[tool.poetry]
name = "jobs-scraper"
version = "0.1.0"
description = "LinkedIn public job search scraper API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
